[package]
name = "viraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["scripting", "reqwest"]
reqwest = ["dep:reqwest"]
scripting = ["lua"]
lua = ["dep:mlua"]

[dependencies]
directories = "4.0"
log = "0.4"
env_logger = "0.9"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }

# Hotkey support
livesplit-hotkey = "0.6.0"
crossbeam-channel = "0.5"

# Make app available in system tray
tray-item = "0.7.1"

# Scripting support
mlua = { version = "0.8", features = ["luau", "async"], optional = true }

reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
